Feat: Add dark mode toggle

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <div class="container">
+        <label for="theme-toggle" class="theme-switcher">
+            <span class="moon">🌙</span>
+            <span class="sun">☀️</span>
+        </label>
+        <input type="checkbox" id="theme-toggle" style="display: none;">
         <h1>Lotto Number Generator</h1>
         <div id="lotto-numbers" class="lotto-numbers-container">
             <lotto-number-display></lotto-number-display>
