--- a/index.html
+++ b/index.html
@@ -10,17 +10,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <label for="theme-toggle" class="theme-switcher">
-            <span class="moon">🌙</span>
-            <span class="sun">☀️</span>
-        </label>
-        <input type="checkbox" id="theme-toggle" style="display: none;">
-        <h1>Lotto Number Generator</h1>
-        <div id="lotto-numbers" class="lotto-numbers-container">
-            <lotto-number-display></lotto-number-display>
+    <div class="main-content">
+        <div class="container">
+            <label for="theme-toggle" class="theme-switcher">
+                <span class="moon">🌙</span>
+                <span class="sun">☀️</span>
+            </label>
+            <input type="checkbox" id="theme-toggle" style="display: none;">
+            <h1>Lotto Number Generator</h1>
+            <div id="lotto-numbers" class="lotto-numbers-container">
+                <lotto-number-display></lotto-number-display>
+            </div>
+            <button id="generate-btn">Generate Numbers</button>
         </div>
-        <button id="generate-btn">Generate Numbers</button>
+
+        <div class="contact-form-container">
+            <h2>Affiliate Inquiry</h2>
+            <form action="https://formspree.io/f/mkoowqkk" method="POST" class="contact-form">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Send Inquiry</button>
+            </form>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
