--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     
       gtag('config', 'G-Y1PT1XD6R9');
     </script>
+    <!-- MS Clarity script -->
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "v2qche1kt8");
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
