feat: Add social media share buttons

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "v2qche1kt8");
     </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -39,6 +40,11 @@
                 <lotto-number-display></lotto-number-display>
             </div>
             <button id="generate-btn">Generate Numbers</button>
+            <div id="share-buttons" class="share-buttons-container">
+                <a href="#" id="twitter-share-btn" class="share-btn twitter" aria-label="Share on Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" id="facebook-share-btn" class="share-btn facebook" aria-label="Share on Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" id="copy-link-btn" class="share-btn copy-link" aria-label="Copy link"><i class="fas fa-link"></i></a>
+            </div>
         </div>
 
         <div class="contact-form-container">
