feat: Add Kakao Talk and LINE share buttons, update Twitter icon to X

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
             </div>
             <button id="generate-btn">Generate Numbers</button>
             <div id="share-buttons" class="share-buttons-container">
-                <a href="#" id="twitter-share-btn" class="share-btn twitter" aria-label="Share on Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" id="twitter-share-btn" class="share-btn twitter" aria-label="Share on X (formerly Twitter)"><i class="fab fa-x-twitter"></i></a>
                 <a href="#" id="facebook-share-btn" class="share-btn facebook" aria-label="Share on Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" id="kakao-share-btn" class="share-btn kakao" aria-label="Share on Kakao Talk"><i class="fas fa-comment"></i></a>
+                <a href="#" id="line-share-btn" class="share-btn line" aria-label="Share on Line"><i class="fab fa-line"></i></a>
                 <a href="#" id="copy-link-btn" class="share-btn copy-link" aria-label="Copy link"><i class="fas fa-link"></i></a>
             </div>
         </div>
